[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracentic"
version = "0.1.0"
description = "Tracentic SDK for Python — LLM observability with scoped tracing and OTLP export"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Tracentic" }]
requires-python = ">=3.10"
keywords = ["tracentic", "llm", "observability", "tracing", "otlp", "opentelemetry", "ai", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/tracentic/tracentic-python"
Repository = "https://github.com/tracentic/tracentic-python"
"Bug Tracker" = "https://github.com/tracentic/tracentic-python/issues"
Changelog = "https://github.com/tracentic/tracentic-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
starlette = ["starlette>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracentic"]
# Explicit belt-and-braces: hatchling would already include py.typed via the
# packages glob, but name it so future refactors can't silently drop the
# PEP 561 marker and break type-checking for downstream consumers.
include = ["src/tracentic/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
